[tool.poetry]
name = "nonebot-plugin-daily-task"
version = "0.1.0"
description = "适用于NoneBot2的每日任务提醒插件"
authors = ["WMGray"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
nonebot-plugin-apscheduler = "0.4.0"
tinydb = "4.8.0"
nonebot2 = "2.3.0"
nonebot-adapter-onebot = "2.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
