[project]
name = "nonebot_plugin_daily_task"
version = "0.1.6"
description = "Default template for PDM package"
authors = [
    { name = "WMGray", email = "1466787434@qq.com" },
]
dependencies = [
    "nb-cli==1.4.1",
    "nonebot2==2.3.0",
    "nonebot-plugin-apscheduler==0.4.0",
    "nonebot-adapter-onebot==2.4.3",
    "pydantic==2.7.1",
    "tinydb==4.8.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
