[project]
name = "nonebot_plugin_daily_task"
version = "0.1.7"
description = "适用于Nonebot2的每日任务提醒插件"
authors = [
    { name = "WMGray", email = "1466787434@qq.com" },
]
dependencies = [
    "nb-cli==1.4.1",
    "nonebot2[fastapi]>=2.3.0",
    "nonebot-adapter-onebot==2.4.3",
    "nonebot-plugin-apscheduler==0.4.0",
    "tinydb==4.8.0",
    "httpx==0.27.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
